# staged-script

./: .bandit  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.md  README.md  SECURITY.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug.md  post-mortem.md  question.md  refactor.md
.github/workflows/: codeql.yml  continuous-integration.yml  dependency-review.yml  scorecard.yml  semantic-release.yml
doc/: make-html.bash  requirements.txt
doc/source/: conf.py  examples.rst  features.rst  index.rst  motivation.rst  reference.rst  spelling_wordlist.txt
doc/source/features/: dynamic-argument-parser.rst  running-commands.rst  script-execution-summary.rst  stage-implementation-details.rst  the-conceptual-stage.rst
driver_script/: driver_script.py
example/: ex_0_the_basics.py  ex_1_removing_the_retry_arguments.py  ex_2_running_certain_stages_by_default.py  ex_3_adding_arguments.py  ex_4_customizing_stage_behavior.py  ex_5_customizing_individual_stages.py  ex_6_creating_retryable_stages.py  ex_7_customizing_the_summary.py  requirements.txt  run-all.bash  test_examples.py
staged_script/: __init__.py  staged_script.py
test/: __init__.py  requirements.txt  test_driver_script.py  test_driver_script_advanced_subclass.py  test_driver_script_basic_subclass.py  test_driver_script_registered_stages.py  test_driver_script_stageless_subclass.py  test_staged_script.py  test_staged_script_advanced_subclass.py  test_staged_script_basic_subclass.py  test_staged_script_registered_stages.py
