[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "staged-script"
version = "2.0.5"
license = "LICENSE.md"
readme = "README.md"
keywords = [
    "automation",
    "command",
    "execution",
    "repeatability",
    "replicability",
    "reproducibility",
    "pipeline",
    "retry",
    "scripting",
    "shell",
    "stages",
]
repository = "https://github.com/sandialabs/staged-script"
description = """
A Python package enabling the development of robust automation scripts that \
are subdivided into stages."""
documentation = "https://staged-script.readthedocs.io"
authors = [
    "Jason M. Gates <jmgate@sandia.gov>"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Typing :: Typed",
]


[tool.poetry.urls]
CI = "https://github.com/sandialabs/staged-script/actions"
Issues = "https://github.com/sandialabs/staged-script/issues"


[tool.poetry.dependencies]
python = ">=3.10"
reverse-argparse = "*"
rich = "*"
tenacity = "*"


[tool.ruff]
line-length = 79


[tool.ruff.lint]
extend-select = [
    "A",
    "AIR",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "D",
    "DJ",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TD",
    "TID",
    "TCH",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D212",
]


[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",
    "SLF001",
    "T201",
]
"doc/source/conf.py" = ["INP001"]
"example/*.py" = [
    "D101",
    "D102",
    "D103",
    "D107",
    "S603",
    "S604",
]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.semantic_release]
build_command = "python3 -m pip install poetry && poetry build"
commit_message = """
chore: Release v{version}

Automatically generated by python-semantic-release."""
version_variables = [
    "doc/source/conf.py:version",
    "staged_script/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]


[tool.semantic_release.branches.master]
match = "master"


[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore.*deps.*Bump",
    "Merge pull request",
    "ci.*pre-commit.*auto-update",
]


[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"


[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "minor",
    "patch",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = ["feat", "minor"]
patch_tags = ["fix", "patch", "perf"]
